<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/InterventionForm">

    <TextView
        android:id="@+id/InterventionTitleLabel"
        android:text="@string/title_new_intervention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/label_intervention_address"
        android:textSize="16sp" />

    <!--EditText
        android:id="@+id/interventionAddress"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:textSize="12sp"
        tools:text="ggggfffF" /-->
    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/hint_intervention_address" >

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/codeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_intervention_sinister_code"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/CodeList"
        android:layout_width="326dp"
        android:layout_height="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp" />
</LinearLayout>
